// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator renders with custom styles 1`] = `
<View
  style={
    {
      "backgroundColor": "green",
    }
  }
>
  <ActivityIndicator
    color="green"
    size="large"
    testID="activity-indicator-test"
  />
</View>
`;

exports[`ActivityIndicator renders with default styles 1`] = `
<View
  style={{}}
>
  <ActivityIndicator
    color="gray"
    size="large"
    testID="activity-indicator-test"
  />
</View>
`;
